<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".pin_code.SecurityQuestionActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/security_question_one"
        android:layout_margin="15dp"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/et_securityQuestionOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textSize="18sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/security_question_two"
        android:textSize="18sp"
        android:layout_margin="15dp"/>

    <EditText
        android:id="@+id/et_securityQuestionTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textSize="18sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/security_question_three"
        android:textSize="18sp"
        android:layout_margin="15dp"/>

    <EditText
        android:id="@+id/et_securityQuestionThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/btn_setSecurityQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textAllCaps="false"
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/btn_security_question_set"/>
</LinearLayout>