<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#4150B5"
    android:gravity="center">

    <Button
        android:id="@+id/btn_othersCost"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/others_cost"
        android:textSize="20sp"
        android:padding="20dp"
        android:layout_margin="10dp"
        android:background="@drawable/custom_btn"
        android:textColor="#000"
        />

    <Button
        android:id="@+id/btn_vehicleCost"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/vehicle_cost"
        android:textSize="20sp"
        android:padding="20dp"
        android:layout_margin="10dp"
        android:background="@drawable/custom_btn"
        android:textColor="#000"
        />

    <Button
        android:id="@+id/btn_savingsPlan"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/savings_bill"
        android:textSize="20sp"
        android:padding="20dp"
        android:layout_margin="10dp"
        android:background="@drawable/custom_btn"
        android:textColor="#000"
        />


</LinearLayout>